--- a/vamstar/src/main/resources/application.properties
+++ b/vamstar/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+
+spring.devtools.restart.exclude=static/**,public/**
+
+#paypal sandbox info
+paypal.mode=sandbox
+paypal.client.id=AXXaolVl7_7K9yBoM3WhKOyokpQD-wNCER1B13jnmbK1ICwKzP0u_Upcu1X8UchQ_r0JMGpmGPHQFP39
+paypal.client.secret=EOsNIDnrMMXP8YYx-jhR74tjKJIMmjosZWIF9bM59VW0P0EFweZlb711hbTmpT2yVSWuzAnEbMc-LJuH
+
+#braintree sandbox info
+BT_ENVIRONMENT=sandbox
+BT_MERCHANT_ID=w3n3fxkzjdc7gxv5
+BT_PUBLIC_KEY=6ymr6d7x74fdv3w7
+BT_PRIVATE_KEY=5568dfc9bd767e49079905690a75fc68
