--- a/vamstar/src/main/resources/application.properties
+++ b/vamstar/src/main/resources/application.properties
@@ -5,11 +5,11 @@ spring.devtools.restart.exclude=static/**,public/**
 
 #paypal sandbox info
 paypal.mode=sandbox
-paypal.client.id=AXXaolVl7_7K9yBoM3WhKOyokpQD-wNCER1B13jnmbK1ICwKzP0u_Upcu1X8UchQ_r0JMGpmGPHQFP39
-paypal.client.secret=EOsNIDnrMMXP8YYx-jhR74tjKJIMmjosZWIF9bM59VW0P0EFweZlb711hbTmpT2yVSWuzAnEbMc-LJuH
+paypal.client.id=enter your client id here
+paypal.client.secret=enter your client secret here
 
 #braintree sandbox info
 BT_ENVIRONMENT=sandbox
-BT_MERCHANT_ID=w3n3fxkzjdc7gxv5
-BT_PUBLIC_KEY=6ymr6d7x74fdv3w7
-BT_PRIVATE_KEY=5568dfc9bd767e49079905690a75fc68
+BT_MERCHANT_ID=enter your merchant id here
+BT_PUBLIC_KEY=enter your public key here
+BT_PRIVATE_KEY=enter your priate key here
